@@ -40,7 +40,9 @@ endif::[]
 
 [float]
 ===== Added
-- Expanded support for extracting ActiveRecord adapter name from notification payload when using ActiveRecord versions before 6.0 {pull}953[#953]
+
+- Expanded support for extracting ActiveRecord adapter name from notification payload when using
+  ActiveRecord versions before 6.0 {pull}953[#953]
 
 [float]
 ===== Fixed
